* Allow to define computation dates on Commission Plans
* Allow to define default payment term for commission invoice in configuration
* Display commission rate on commission

Version 1.4 - 2015-05-29
* Allow to cancel commission invoice
* Add broker fee management
* Automatic payment generation for broker based on configuration

Version 1.3 - 2015-01-22
* Add temporal versioning to agents
* Add a wizard to mass create agents
* module creation