@@ -1,3 +1,4 @@
+* Add Change Broker wizard
 * Allow to define computation dates on Commission Plans
 * Allow to define default payment term for commission invoice in configuration
 * Display commission rate on commission
